Issue #4616: Form API: Support #title_display invisible for fieldsets

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -661,6 +661,9 @@ fieldset {
   border: 2px solid #EAEAEA;
   min-width: 0;
 }
+fieldset.legend-invisible {
+  padding-top: 0;
+}
 fieldset .fieldset-legend {
   position: absolute;
   left: 0; /* LTR */
